--- a/style.css
+++ b/style.css
@@ -4,12 +4,12 @@
 
 }
 
-.header{
+.Header{
     color:#F9FAF8;
     background-color: #1F2937;
 }
 
-.header-top{
+.Headertop{
     display:flex;
     justify-content: space-between;
 }
