--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 
 .header {
     background-color: #1F2937;
+    padding-bottom: 100px;
 }
 
 .headertop{
@@ -78,4 +79,91 @@ img{
 .description {
     margin-top: 20px;
     max-width: 444px;
+}
+
+.information-header{
+    text-align: center;
+    font-size:36px;
+    color:#1F2937;
+    font-weight: 900;
+    margin: 30px 0;
+}
+
+.section-two{
+    display:flex;
+    justify-content: center;
+    gap:30px;
+    margin-bottom: 50px;
+}
+
+.section-two p{
+    text-align: center;
+    padding-top: 10px;
+}
+
+.info-pics{
+    width:200px;
+    height: 150px;
+}
+
+.quote-section{
+    display:flex;
+    flex-direction: column;
+    flex-direction: center;
+    align-items: center;
+    background-color: #E5E7EB;
+    color:#1F2937;
+    font-size: 36px;
+    font-style:italic;
+    font-weight: lighter;
+}
+
+.quote-text{
+    padding-top: 50px;
+}
+
+.author{
+    display:flex;
+    justify-content: flex-end;
+    font-weight: 700;
+    margin: 70px 0;
+}
+
+.section-four{
+    display:flex;
+    justify-content: center;
+    padding:50px;
+}
+
+.action-box{
+    display:flex;
+    background-color: #3882F6;
+    width:1200px;
+    justify-content: space-around;
+    padding:50px;
+    border-radius: 10px;
+}
+
+.section-four p{
+    color:#F9FAF8;
+}
+
+.action-title{
+    font-size:24px;
+    font-weight: 500;
+}
+
+.action-button{
+    border:2px solid white;
+    padding: 10px 30px;
+    font-size: 20px;
+}
+
+.footer{
+    display:flex;
+    background-color: #1F2937;
+    color:white;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
 }
